Improve reload trees